--- a/notebooks/Speech Recognition Step 2 Acoustic Modeling.ipynb
+++ b/notebooks/Speech Recognition Step 2 Acoustic Modeling.ipynb
@@ -4,13 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overview of Speech Recognition\n"
+    "# 1 Overview of Speech Recognition\n",
+    "## 1.1 Hidden Markov Model for Accoustic Modeling\n",
+    "As speech is \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 2 Hidden Markov Model for Accoustic Modeling\n",
+    "## Phoneme model of words\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2.1 Gaussian Mixture Model\n"
+   ]
   },
   {
    "cell_type": "code",
