--- a/notebooks/LDA.ipynb
+++ b/notebooks/LDA.ipynb
@@ -12,24 +12,40 @@
     "+ Generative probability model\n",
     "\n",
     "## Graphical representation\n",
-    "<img src=\"LDA.png\">"
+    "<img src=\"LDA2.png\">"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Latent Dirichlet allocation\n",
+    "- LDA is a generative probabilistic model of a coupus\n",
+    "- Basic idea\n",
+    ">+ Documents are represented as **random mixtures** over **latent topics**\n",
+    " + Each topic is characterized by a distribution over words.\n",
+    "\n",
+    "- LDA assumes the following generative process for each document **w** in a corpus **D**:\n",
+    "> 1. Choose $N$ ~ $Possion(\\xi)$\n",
+    "  2. Choose $\\theta$ ~ $Dir(\\alpha)$\n",
+    "  3. For each of the N words $w_n$:\n",
+    "  >> (a) Choose a topic $z_n$ ~ $Multinomial(\\theta)$ <br>\n",
+    "     (b) Choose a word $w_n$ from $p(w_n|z_n, \\varphi)$, a multinomial probability conditioned on the topic $z_n$\n",
+    "\n",
+    "\n",
+    "- Assumptions\n",
+    "> 1. Dim of Dirichlet distribution is fixed as k(so the dim of topics z)\n",
+    "  2. Word probabilities are parameterized by a $k\\times V $ matrix $\\beta$, $\\beta_{ij} = p(w^j|z^i=1)$. This is treated as a fixed quantity that is to be estimated.\n",
+    "  3. The Possion distribution is not critical to anything that follows and more realistic document length distributions can be used as needed.\n",
+    "  4. N is independent of all the other data generating variables ($theta$ and $z$). It is thus an ancillary variable and we will generally ignore its randomness in the subsequent development.\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "s"
-   ]
+   "source": []
   }
  ],
  "metadata": {
