Gibbs sampling LDA

--- a/notebooks/LDA.ipynb
+++ b/notebooks/LDA.ipynb
@@ -46,6 +46,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'int'>, {'banana': 2, 'apple': 2, 'strawberry': 1, 'lemon': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "words = \"apple banana apple strawberry banana lemon\"\n",
+    "words = words.split()\n",
+    "result = defaultdict(int)\n",
+    "for word in words:\n",
+    "    result[word] += 1\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "class LDA:\n",
+    "    def __init__(self, tf_matrix, alpha, beta):\n",
+    "        self.alpha = alpha\n",
+    "        self.beta  = beta\n",
+    "        self.tf_matrix\n",
+    "        self.phi = np.zero\n",
+    "    def gibbs_sampling(self):\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
