--- a/notebooks/LDA.ipynb
+++ b/notebooks/LDA.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -105,6 +105,47 @@
     "        \n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def word_indices(vec):\n",
+    "    \"\"\"\n",
+    "    Turn a document vector of size vocab_size to a sequence\n",
+    "    of word indices. The word indices are between 0 and\n",
+    "    vocab_size-1. The sequence length is equal to the document length.\n",
+    "    \"\"\"\n",
+    "    for idx in vec.nonzero()[0]:\n",
+    "        for i in range(int(vec[idx])):\n",
+    "            yield idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(word_indices(np.array([.1,.3,.5,.5,.6])))"
    ]
   }
  ],
