--- a/notebooks/Speech Recognition Step 2 Acoustic Modeling.ipynb
+++ b/notebooks/Speech Recognition Step 2 Acoustic Modeling.ipynb
@@ -102,40 +102,6 @@
     "        K= len(Mus)\n",
     "        ll = np.sum(np.log(SumGauss(x, Mus, Pis, Sigmas)) for x in X)\n",
     "        return ll\n",
-    "        \n",
-    "        \n",
-    "    def SumGauss(x, Mus, Sigmas, Pis):\n",
-    "        return np.sum([Pis[i] * Gauss(x, Mus[i],Sigmas[i]) for i in range(len(Mus))])\n",
-    "    \n",
-    "    def EM_init(self, Mus, Sigmas, Pis):\n",
-    "        \"\"\"Initialize EM\"\"\"\n",
-    "        \n",
-    "    def EM(X, Mus_init, Sigmas_init, Pis_init):\n",
-    "        \"\"\"Expectation Maximization Algorithm\"\"\" \n",
-    "        N = len(X)\n",
-    "        # E-step\n",
-    "        Mus, Sigmas, Pis = (Mus_init, Sigmas_init, Pis_init)\n",
-    "        K = len(Mus)\n",
-    "        def E(x, Mus, Sigmas, Pis):\n",
-    "            g = SumGauss(x, Mus, Sigmas, Pis)\n",
-    "            s = np.sum(g)\n",
-    "            return g/s\n",
-    "        \n",
-    "        rk = np.array([E(x, Mus, Sigmas, Pis) for x in X])\n",
-    "        Nk = np.sum(rk, axis=0)\n",
-    "    \n",
-    "        # M-step\n",
-    "        Pis_new = Nk/N\n",
-    "        Mus_new = np.array([np.sum([rk[n,k] * X[n] for n in range(0,N)], axis = 0) for k in range(0, K)])\n",
-    "        def diag_M():\n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "     \n",
-    "        \n",
-    "    \n",
-    "    \n",
-    "    \n",
     "    \n",
     "    def VEM():\n",
     "        \"\"\"Variational EM\"\"\"\n",
@@ -147,7 +113,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from numpy import linalg as la\n",
+    "def Gauss(x, mu, Sigma):\n",
+    "    \"\"\"Multivariate diagnal covariance Gaussian\"\"\"\n",
+    "    return np.exp(-np.dot(np.dot(x-mu, la.inv(Sigma)), x-mu)/2) / (np.power(2 * np.pi, len(mu)/ 2) * np.sqrt(la.det(Sigma)))\n",
+    "\n",
+    "def square_dot(c):\n",
+    "    \"\"\" a * a' \"\"\"\n",
+    "    return np.dot(c[:,np.newaxis], c[:,np.newaxis].T)\n",
+    "class GMM:\n",
+    "    def __init__(self,Pis_init, Mus_init, Sigmas_init, iters):\n",
+    "        assert len(Pis_init) == len(Mus_init) == len(Sigmas_init)\n",
+    "        self.K = len(Pis_init)\n",
+    "        self.Pis = Pis_init\n",
+    "        self.Mus = Mus_init\n",
+    "        self.Sigmas = Sigmas_init\n",
+    "        self.iters = iters\n",
+    "        \n",
+    "    def Gausses(self, x):\n",
+    "        #return np.array([self.Pis[i] * Gauss(x, self.Mus[i], self.Sigmas[i]) for i in range(self.K)])\n",
+    "        return np.array([pi * Gauss(x, mu, Sigma) for (pi, mu, Sigma) in zip(self.Pis, self.Mus, self.Sigmas)])\n",
+    "    \n",
+    "    def E(self, x):      \n",
+    "        g = self.Gausses(x)\n",
+    "        return g/np.sum(g)\n",
+    "        \n",
+    "    def EM(self, X):\n",
+    "        N = len(X)\n",
+    "        # E step\n",
+    "        R_nk = np.array([self.E(x) for x in X])\n",
+    "        \n",
+    "        # M step\n",
+    "        N_k  = np.sum(R_nk, axis=0)\n",
+    "        self.Pis = N_k/N\n",
+    "        # old_Mus = self.Mus\n",
+    "        self.Mus = [np.sum([R_nk[n, k] * X[n] for n in range(N)], axis=0)/N_k[k] for k in range(self.K)]\n",
+    "        Mus = self.Mus\n",
+    "        self.Sigmas = [np.sum([R_nk[n,k] * square_dot(X[n]-Mus[k]) for n in range(N)], axis=0) /N_k[k] for k in range(self.K)]\n",
+    "    \n",
+    "    def params(self):\n",
+    "        return [self.Pis, self.Mus, self.Sigmas]\n",
+    "    def train(self, X):\n",
+    "        for i in range(self.iters):\n",
+    "            self.EM(X)\n",
+    "    \n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Pis = [.3, 0.7]\n",
+    "Mus = [np.array([0, 0]), np.array([1,0])]\n",
+    "Sigmas = [np.array([[1,0], [0,1]]), np.array([[1,0], [0,1]])]\n",
+    "x = np.array([[2,0], [0,0.5], [1,1]])\n",
+    "\n",
+    "gmm = GMM(Pis, Mus, Sigmas, 4)\n",
+    "\n",
+    "gmm.train(x)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -155,45 +201,145 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.02185271,  2.97814729])"
+       "array([[ 2. ,  0. ],\n",
+       "       [ 0. ,  0.5],\n",
+       "       [ 1. ,  1. ]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "k = 3\n",
-    "d = 2\n",
-    "Pis = np.array([.3,.3])\n",
-    "Mus = np.array([[0.2, 0.7, 0.9], [2, 3, 4]])\n",
-    "Sigmas = np.array([[0.4,.6, 0.7],[0.4,.3, 0.7]])\n",
-    "\n",
-    "def Gauss(x, mu, Sigma):\n",
-    "    \"\"\"Multivariate diagnal covariance Gaussian\"\"\"\n",
-    "    return np.exp(-np.dot((x-mu)/Sigma, x-mu)) / (np.power(2 * np.pi, len(mu)/ 2) * np.sqrt(np.prod(Sigma)))\n",
-    "\n",
-    "X=np.array([[1,2,3],[4,5,6],[7,9,8]])\n",
-    "#g = [Pis[i] * Gauss(x, Mus[i],Sigmas[i]) for i in range(0, len(Mus))]\n",
-    "#g1 = Gauss(x.reshape((3,1)), Mus[1].reshape((3,1)),Sigmas[1])\n",
-    "#print(\"g1: \",g1)\n",
-    "\n",
-    "\n",
-    "def E(x, Mus, Sigmas, Pis):\n",
-    "        g = np.array([Pis[i] * Gauss(x, Mus[i],Sigmas[i]) for i in range(len(Mus))])\n",
-    "        s = np.sum(g)\n",
-    "        return g/s\n",
-    "    \n",
-    "\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "rk = np.array([E(x, Mus, Sigmas, Pis) for x in X])\n",
-    "nk = np.sum(rk, axis=0)\n",
-    "nk\n",
-    "\n"
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([ 0.66609022,  0.33390978]),\n",
+       " [array([ 0.4995783 ,  0.74978915]),\n",
+       "  array([  1.99825168e+00,   1.71537899e-03])],\n",
+       " [array([[ 0.24999982,  0.12499991],\n",
+       "         [ 0.12499991,  0.06249996]]), array([[ 0.00178919, -0.00172336],\n",
+       "         [-0.00172336,  0.00170695]])]]"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gmm.params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = np.dot((x[0]-Mus[0])[:, np.newaxis], (x[0]-Mus[0])[:, np.newaxis].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.,  0.],\n",
+       "       [ 4.,  0.]])"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum([a,a], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.021539279301848631"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Gauss(np.array([2,0]), np.array([0,0]), np.array([[1,0], [0,1]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(np.array([0,0]), np.invert(np.array([[1,0], [0,1]])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.det(np.array([[1,0], [0,1]]))"
    ]
   },
   {
@@ -229,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -257,7 +403,7 @@
        "14"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
