--- a/notebooks/Speech Recognition Step 2 Acoustic Modeling.ipynb
+++ b/notebooks/Speech Recognition Step 2 Acoustic Modeling.ipynb
@@ -76,43 +76,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\"This implementation only focus on diagonal Gaussians\n",
-    "\"\"\"\n",
-    "\n",
-    "import numpy as np\n",
-    "from numpy import linalg as la\n",
-    "class GMM:\n",
-    "    def __init__(self):\n",
-    "        EM_init()\n",
-    "    \n",
-    "    def Gauss(x, mu, Sigma):\n",
-    "        \"\"\"Multivariate diagnal covariance Gaussian\"\"\"\n",
-    "        return np.exp(-np.dot((x-mu)/Sigma, x-mu)) / (np.power(2 * np.pi, len(mu)/ 2) * np.sqrt(np.prod(Sigma)))\n",
-    "\n",
-    "    def log_likelihood(self, X):\n",
-    "        \"\"\"Compute log likelihood\"\"\"\n",
-    "        Mus, Pis, Sigmas = (self.Mus, self.Pis, self.Sigmas)\n",
-    "        assert(len(Mus) == len(Pis)==len(Simgas))\n",
-    "        K= len(Mus)\n",
-    "        ll = np.sum(np.log(SumGauss(x, Mus, Pis, Sigmas)) for x in X)\n",
-    "        return ll\n",
-    "    \n",
-    "    def VEM():\n",
-    "        \"\"\"Variational EM\"\"\"\n",
-    "    \n",
-    "    def GMM(data, K, covtype=\"diagonal\"):\n",
-    "        \"\"\"Gaussian Mixture Model using Variational EM\"\"\"\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 139,
    "metadata": {
     "collapsed": false
@@ -163,13 +126,7 @@
     "    def train(self, X):\n",
     "        for i in range(self.iters):\n",
     "            self.EM(X)\n",
-    "    \n",
-    "        \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    \n"
+    "            "
    ]
   },
   {
@@ -277,96 +234,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.021539279301848631"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Gauss(np.array([2,0]), np.array([0,0]), np.array([[1,0], [0,1]]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.dot(np.array([0,0]), np.invert(np.array([[1,0], [0,1]])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linalg.det(np.array([[1,0], [0,1]]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'x' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-ab11875f3186>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mPis\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mGauss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMus\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mSigmas\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMus\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-15-ab11875f3186>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mPis\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mGauss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMus\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mSigmas\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMus\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "np.array([Pis[i] * Gauss(x, Mus[i],Sigmas[i]) for i in range(len(Mus))])\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -418,7 +285,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 Hidden Markov Model"
+    "# 3 Hidden Markov Model\n",
+    "## 3.1 Markov Chains\n",
+    "+ Markov Chains property\n",
+    "> The current value is only dependent on the recent one\n",
+    "$$p(x_n | x_1,x_2,...,x_{n-1}) = p(x_n|x_{n-1})$$\n",
+    "$$p(x_1,x_2, ...,x_N) = p(x_1)\\prod_{n=2}^{N}p(x_n|x_{n-1})$$\n",
+    "\n",
+    "## 3.2 Hidden States\n",
+    "\n",
+    "\n",
+    "$$ $$\n",
+    "\n",
+    "\n"
    ]
   }
  ],
